--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/app/destinations.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>App</h4>
+                <p>Destinations</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="Port Frongakang Site.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/app/destinations.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Destinations App"><i class="bx bx-plus"></i></a>
+                  <a href="App Destinations.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -357,13 +357,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/app/Crypto.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>App</h4>
+                <p>Crypto</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/app/Crypto.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Crypto App"><i class="bx bx-plus"></i></a>
+                  <a href="App Crypto.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -397,7 +397,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -409,7 +409,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -439,20 +439,6 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/design/plant.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Design</h4>
-                <p>Plant/Flora</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/design/plant.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Graphic Design"><i class="bx bx-plus"></i></a>
-                  <a href="Design Style 2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web/kelud.jpg" class="img-fluid" alt="">
@@ -476,6 +462,48 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/web/nusantara.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Masakan Nusantara "><i class="bx bx-plus"></i></a>
                   <a href="Site Nusantara.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/design/plant.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Design</h4>
+                <p>Flora/Plant</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/design/plant.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Graphic Design"><i class="bx bx-plus"></i></a>
+                  <a href="Design Plant.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/design/mood.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Design</h4>
+                <p>Mood</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/design/mood.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Graphic Design"><i class="bx bx-plus"></i></a>
+                  <a href="Design Mood.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/design/trend.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Design</h4>
+                <p>Trend</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/design/trend.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Graphic Design"><i class="bx bx-plus"></i></a>
+                  <a href="Design Trend.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
