--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; IT Specialist.</h3>
+            <h3>UI/UX Developer &amp; IT Specialist.</h3>
              <!-- <p class="fst-italic">
               I enjoy collaborating with people, facing new challenges, and continuously learning to develop my skills.
             </p> -->
@@ -96,7 +96,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 October 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 85230750036</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 85000000000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>delfianalfiandi30@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Malang East Java Indonesia</span></li>
                 </ul>
@@ -255,7 +255,7 @@
               <p><em>I am an innovative and deadline-driven UI/UX and graphic designer with over 3 years of experience in designing and developing user-focused digital marketing materials from initial concept to final polished deliverables.</em></p>
               <ul>
                 <li>Malang East Java Indonesia</li>
-                <li>+62 85230750036</li>
+                <li>+62 8500000000</li>
                 <li>delfianalfiandi30@gmail.com</li>
               </ul>
             </div>
@@ -639,7 +639,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+62 85230750036</p>
+                <p>+62 85000000000</p>
               </div>
 
             </div>
